# mos-skeleton

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  main.cpp
assets/: Empty.environment_light  Spot.light  back_wall.mesh  back_wall.model  blue.material  ceiling.model  default02.material  default10.material  default12.material  default20.material  default21.material  dirt.material  floor.mesh  floor.model  green.material  left_wall.mesh  left_wall.model  level.level  level1.level  metal.material  metal_plates.001.material  mirror.material  right_wall.model  roughness0.material  roughness1.material  skeleton.level  sphere.mesh  sphere0.mesh  sphere0.model  sphere00.model  sphere01.model  sphere02.001.model  sphere02.model  sphere1.model  sphere10.model  sphere11.model  sphere12.001.model  sphere12.model  sphere2.model  sphere20.model  (+7 more)
assets/antenna/entities/: Cylinder.001.model  Stick.001.model  Stick.model
assets/antenna/materials/: antenna.material
assets/skeleton/: Empty.environment_light  Spot.001.light  Spot.001.light_data  Spot.light  back_wall.mesh  back_wall.model  ceiling.mesh  ceiling.model  default11.material  default22.material  dirt.material  floor.mesh  floor.model  left_wall.mesh  left_wall.model  metal.material  metal_plates.material  red.material  right_wall.mesh  right_wall.model  sphere00.model  sphere01.model  sphere02.001.model  sphere02.model  sphere10.model  sphere11.model  sphere12.001.model  sphere12.model  sphere20.model  sphere21.model  sphere22.001.model  sphere22.model
assets_src/: skeleton.blend  skeleton.blend1
(+649 files in other folders)
